Added python3 support, separated common module into commonio.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "ifconfig",
         "pexpect",
         "pxssh"
-    ]
+    ],
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.6/bin/python3"
 }
