--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Unimported",
         "cdir",
         "ifconfig",
+        "isfile",
         "nargs",
         "pexpect",
         "pxssh"
