--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "cdir",
         "ifconfig",
         "isfile",
+        "lanaddr",
         "miniupnpc",
         "nargs",
         "pexpect",
