Fixed travis, I think.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,16 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+
 script:
   - python payload/rsa/encrypt.py
   - python payload/rsa/decrypt.py
   - python payload/rsa/key.py
   - python payload/rsa/rsa.py
 
-  - python command/command.py
+  - python src/main.py
 
 notifications:
   email:
-    on_success: never
-    on_failure: never
+    on_success: always
+    on_failure: always
