--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python payload/rsa/encrypt.py
-  - python payload/rsa/decrypt.py
-  - python payload/rsa/key.py
-  - python payload/rsa/rsa.py
+  - python -m payload.rsa.encrypt.py
+  - python -m payload.rsa.decrypt.py
+  - python -m payload.rsa.key.py
+  - python -m payload.rsa.rsa.py
 
   - python src/main.py
 
