I dont want emails

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ script:
 
 notifications:
   email:
+    recipients:
+      - mitsukomegumi@gmail.com
     on_success: always
     on_failure: always
