Updated server addresses.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,5 @@
         "vbucks",
         "vbucksusername"
     ],
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "C:\\Users\\dnalw\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
