--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,31 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-
+  - cd payload/vbucks
+  - npm i
+  - cd ../../
 script:
   - python src/main.py --server --test
+  - cd payload/vbucks
+  - npm start
+  - cd ../../
+notifications:
+  email:
+    recipients:
+      - mitsukomegumi@gmail.com
+    on_success: always
+    on_failure: always
 
+
+language: node_js
+node_js:
+  - "iojs"
+  - "7"
+before_install:
+  - cd payload/vbucks
+install: npm install
+script:
+  - npm start
 notifications:
   email:
     recipients:
