--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ script:
 notifications:
   email:
     recipients:
-      - mitsukomegumi@gmail.com
+      - mitsukomegumii@gmail.com
     on_success: always
     on_failure: always
